Kubernetes/app/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: kube-sg
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
      - name: frontend
        image: shreenidhidev/frontend:v1
        imagePullPolicy: Always
        ports: [{ containerPort: 80 }]
        resources: 
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
              memory: "128Mi"
              cpu: "500m"
