Kubernetes/app/game-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
  namespace: kube-sg
spec:
  replicas: 1
  selector:
    matchLabels: { app: game-service }
  template:
    metadata:
      labels: { app: game-service }
    spec:
      containers:
      - name: game-service
        image: shreenidhidev/game-service:v1 #TODO: change this to variable.
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
