Kubernetes/app/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: kube-sg
  labels:
    app: auth-service # <-- Add this label
    release: prometheus # It's good practice to also add the release label
spec:
  selector: { app: auth-service }
  ports:
  - name: http-metrics
    port: 8080
    targetPort: 8080
