Kubernetes/app/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: kube-sg
spec:
  selector: { app: frontend }
  ports: [{ port: 80, targetPort: 80 }]
  type: ClusterIP
