Kubernetes/app/gateway.yml
# manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kube-sg-gateway
  namespace: kgateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "kubetest.shreenidhi.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: kubetest-shreenidhi-dev-tls
      allowedRoutes:
        namespaces:
          from: All
