Kubernetes/app/http-route.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: kube-sg
spec:
  parentRefs:
  - name: kube-sg-gateway
    namespace: kgateway-system
  hostnames:
  - "kubetest.shreenidhi.dev"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
    - name: frontend
      namespace: kube-sg
      port: 80
      kind: Service
